--- a/Tutorials/C#/Marcin.APIs.Examples/CurrentDateApi/CurrentDateApi.csproj
+++ b/Tutorials/C#/Marcin.APIs.Examples/CurrentDateApi/CurrentDateApi.csproj
@@ -144,6 +144,7 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\MarcinTestAPi - Web Deploy.pubxml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
